--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,23 @@
 body {
-  margin: 0;
+  margin-top: 300;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #303030;
-  color: #FFFFFF;
+  background-color: rgb(114, 189, 76);
+}
+
+img {
+  width: 300px;
+  height: 300px;
+  display: inline-flex;
+  position: center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  position: center;
+  background-color: rgb(114, 189, 76);
 }
